--- a/contact.css
+++ b/contact.css
@@ -1,7 +1,9 @@
 body{
     color: white;
     background-color: black;
+    background-size: cover;
     font-family: Arial, Helvetica, sans-serif;
+    background-image: url(./img/fundo.png);
 }
 ul{
     display: flex;
