--- a/index.css
+++ b/index.css
@@ -1,7 +1,8 @@
 body{
     color: white;
-    background-color: black;
+    background-color: rgb(29, 26, 26);
     font-family: Arial, Helvetica, sans-serif;
+    background-image: url(./img/fundo.png);
 }
 
 ul{
@@ -18,10 +19,10 @@ a{
 }
 
 header img{
-    width: 150px;
-    height: 150px;
+    width: 140px;
+    height: 140px;
     border-radius: 50%;
-    border: 5px solid white;
+    border: 6px solid rgb(61, 230, 179);
 }
 
 .center{
