--- a/personalize.css
+++ b/personalize.css
@@ -1,14 +1,16 @@
 body{
     color: white;
     background-color: black;
+    background-size: cover;
     font-family: Arial, Helvetica, sans-serif;
+    background-image: url(./img/fundo.png);
 }
 ul{
     display: flex;
     justify-content: space-between;
     list-style-type: none;
     align-items: center;
-    padding: 20px;
+    padding: 5px;
 }
 a{
     color: white;
