--- a/venda.css
+++ b/venda.css
@@ -1,9 +1,23 @@
 body{
     color: white;
     background-color: black;
+    background-size: cover;
     font-family: Arial, Helvetica, sans-serif;
+    background-image: url(./img/fundo.png);
 }
-
+.fundo{
+    
+    background-size: cover;
+    width: 1px;
+    height: 1px;
+}
+.fundogato{
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+    width: 1px;
+    height: 1px;
+}
 ul{
     display: flex;
     justify-content: space-between;
@@ -70,3 +84,4 @@ footer p{
 nav a:hover{
     color: cyan;
 }
+
