--- a/index.css
+++ b/index.css
@@ -30,18 +30,33 @@ header img{
 }
 
 h1{
-    color: gray;
+    color: rgb(253, 247, 247);
+    text-align: center;
+}
+
+h2{
+    text-align: center;
+}
+
+p{
+    text-align: center;
+}
+
+h3{
+    text-align: center;
 }
 
 footer img{
     width: 40px;
     height: 40px;
     border-radius: 50%;
+    
 }
 
 footer{
     display: flex;
     justify-content: center;
+       
 }
 
 footer a {
@@ -51,6 +66,7 @@ footer a {
 
 footer p{
     margin-top: 2px;
+    padding: 2px;
 }
 
 .container{
