--- a/venda.css
+++ b/venda.css
@@ -5,12 +5,14 @@ body{
     font-family: Arial, Helvetica, sans-serif;
     background-image: url(./img/fundo.png);
 }
+
 .fundo{
     
     background-size: cover;
     width: 1px;
     height: 1px;
 }
+
 .fundogato{
     background-repeat: no-repeat;
     background-position: center center;
@@ -18,6 +20,19 @@ body{
     width: 1px;
     height: 1px;
 }
+
+.col-md-6 h3{
+    color: cyan;
+}
+
+.col-md-6{
+    text-align: center;
+}
+
+.col-md-4{
+    text-align: center;
+}
+
 ul{
     display: flex;
     justify-content: space-between;
@@ -46,15 +61,25 @@ h1{
     text-align: center;
     color: rgb(228, 74, 189);
 }
+
 h2{
     text-align: center;
 }
+
 h3{
     text-align: center;
     color: aqua;
 }
+
 p{
     text-align: center;
+}
+
+.texto{
+    color: whitesmoke;
+    position: center;
+    top: 500px;
+    left: 800px;
 }
 
 footer img{
@@ -85,3 +110,108 @@ nav a:hover{
     color: cyan;
 }
 
+.produtos{
+    display: flex;
+    justify-content: center;
+}
+
+header{
+    text-align: center;
+}
+
+.produto img{
+    width: 160px;
+    height: 115px;
+    border-radius: 10%;
+    cursor: pointer;
+    margin: 20px;    
+}
+
+.produto img:hover{
+    transform: rotate(-5deg);
+}
+
+.produto p{ 
+    color: whitesmoke;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+}
+
+.main{
+    display: flex;
+    margin-left: 5%;
+}
+
+.galery{
+    width: 300px;
+    height: 300px;
+    margin: auto;
+}
+
+#galary1{
+    background: url('./img/TAGAÇO.PNG') center center no-repeat;
+	height:136px;
+}
+
+.descriprion{
+    width: 180px;
+    margin: 30px;
+    margin-top: -1px;
+    padding: 1px;
+    color: whitesmoke;
+}
+
+.preencher{
+    min-height: 50px;
+    padding-left: 70px;
+    margin-bottom: 10;
+    font-weight: normal;
+    text-align: left;
+    box-sizing: border-box;
+}
+
+.input{
+    justify-content: left;
+}
+
+.primeira{
+    display: flex;
+    margin-left: 290%;
+}
+
+.texto{
+    align-items: left;
+    text-align: left;
+    font-family:Tahoma, Geneva, sans-serif;
+	color:#eee;
+	text-transform:uppercase;
+	line-height: 20px;
+	font-size:13px;
+	text-shadow: rgba(0,0,0,0.5) -1px 0, rgba(0,0,0,0.3) 0 -1px, rgba(255,255,255,0.5) 0 1px, rgba(0,0,0,0.3) -1px -2px;    
+}
+
+.btn {
+    display: inline-block;
+    padding: 6px 12px;
+    margin-bottom: 0;
+    font-size: 14px;
+    font-weight: normal;
+    line-height: 1.42857143;
+    margin-left: -15%;
+    text-align: center;
+    white-space: nowrap;
+    vertical-align: middle;
+    -ms-touch-action: manipulation;
+    touch-action: manipulation;
+    cursor: pointer;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    border: 1px solid transparent;
+    border-radius: 4px;
+}
+
+.botoes{
+    display: inline-block;
+    margin-left: -15%;
+}
