--- a/personalize.css
+++ b/personalize.css
@@ -2,8 +2,9 @@ body{
     color: white;
     background-color: black;
     background-size: cover;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     background-image: url(./img/fundo.png);
+    background-image: url(./img/FUNDOPRETO.png);
 }
 
 ul{
